syntax = "proto3";
package protobuf;
import "google/api/annotations.proto";

message Park {
  uint32 SlotNum = 1;
  string CarReg = 2;
  string CarColour = 3;
}

message Slot {
  uint32 SlotNum = 1;
}

message Car {
  string CarReg = 1;
}

message CreateLotRequest {
  uint32 MaxSlotsCount = 1;
}

message CreateLotResponse {
  string Status = 1;
}

message PostParkRequest {
  string CarReg = 1;
  string CarColour = 2;
}

message PostParkResponse {
  Park Park = 1;
  string Status = 2;
}

message PostUnparkRequest {
  uint32 SlotNum = 1;
}

message PostUnparkResponse {
  string Status = 1;
}

message GetParksRequest{
}

message GetParksResponse{
  repeated Park Parks = 1;
  string Status = 2;
}

message GetCarRegsByColourRequest {
  string CarColour = 1;
}

message GetCarRegsByColourResponse {
  repeated string Cars = 1;
  string Status = 2;
}

message GetSlotsByColourRequest {
  string CarColour = 1;
}

message GetSlotsByColourResponse {
  repeated uint32 Slots = 1;
  string Status = 2;
}

message GetSlotByCarRegRequest {
  string CarReg = 1;
}

message GetSlotByCarRegResponse {
  uint32 SlotNum = 1;
  string Status = 2;
}

service ParkingService {

  rpc CreateLot (CreateLotRequest) returns (CreateLotResponse) {
  option (google.api.http) = {
      post: "/api/v1/createlot"
      body: "*"
    };
  }

  rpc PostPark (PostParkRequest) returns (PostParkResponse) {
  option (google.api.http) = {
      post: "/api/v1/postpark"
      body: "*"
    };
  }

  rpc PostUnpark (PostUnparkRequest) returns (PostUnparkResponse) {
  option (google.api.http) = {
      post: "/api/v1/postunpark"
      body: "*"
    };
  }

  rpc GetParks (GetParksRequest) returns (GetParksResponse) {
  option(google.api.http) = {
      get: "/api/v1/getparks"
    };
  }

  rpc GetCarRegsByColour (GetCarRegsByColourRequest) returns (GetCarRegsByColourResponse) {
  option(google.api.http) = {
      get: "/api/v1/getcarregs/colour/{CarColour}"
    };
  }

  rpc GetSlotsByColour (GetSlotsByColourRequest) returns (GetSlotsByColourResponse) {
  option(google.api.http) = {
      get: "/api/v1/getslots/colour/{CarColour}"
    };
  }

  rpc GetSlotByCarReg (GetSlotByCarRegRequest) returns (GetSlotByCarRegResponse) {
  option(google.api.http) = {
      get: "/api/v1/getslot/reg/{CarReg}"
    };
  }
}
